kibana/ingress.yaml
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: kibana
  namespace: logging
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    kubernetes.io/ingress.class: nginx
spec:
  tls:
    - secretName: kibana-tls
      hosts:
        - kibana.alexos.dev
  rules:
    - host: kibana.alexos.dev
      http:
        paths:
          - path: /
            backend:
              serviceName: kibana
              servicePort: 5601
